--- a/other/PwnDocker/Dockerfile
+++ b/other/PwnDocker/Dockerfile
@@ -11,6 +11,12 @@ RUN apt install -y \
     vim zip unzip locales \
     gdb strace ltrace
 
+RUN dpkg --add-architecture i386; \
+    apt update; apt install -y libc6:i386 libstdc++6:i386
+
+RUN cd /root && git clone https://github.com/djosix/.dots.git; \
+    cd .dots && make all && make git && locale-gen en_US.UTF-8
+
 RUN pip install -U pip; \
     sed -i 's/from pip import main/from pip._internal import main/' /usr/bin/pip; \
     pip install pwntools ipython; \
@@ -18,11 +24,14 @@ RUN pip install -U pip; \
     sed -i 's/from pip import main/from pip._internal import main/' /usr/bin/pip3; \
     pip3 install git+https://github.com/arthaud/python3-pwntools.git ipython
 
-RUN cd /root && git clone https://github.com/djosix/.dots.git; \
-    cd .dots && make all && make git && locale-gen en_US.UTF-8
-
 RUN git clone --depth 1 https://github.com/longld/peda.git ~/.peda; \
     echo "source ~/.peda/peda.py" >> ~/.gdbinit
+
+RUN git clone --depth 1 https://github.com/scwuaptx/Pwngdb.git ~/.pwngdb; \
+    cp ~/.pwngdb/.gdbinit ~/; \
+    sed -i 's/~\/Pwngdb/~\/\.pwngdb/g' ~/.gdbinit; \
+    sed -i 's/~\/peda/~\/\.peda/g' ~/.gdbinit; \
+    apt install -y libc6-dbg libc6-dbg:i386
 
 RUN chsh -s /usr/bin/zsh; \
     bash -c 'history -c'
