--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,22 @@
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+# djosix 2018.8.3
 
-# color
 set -g default-terminal "screen-256color"
+
 set-option -g status-bg colour236
 set-option -g status-fg colour248
+
 set-window-option -g window-status-current-fg colour230
+set-window-option -g window-status-current-bg colour100
 
-
-# shift + left/right
+# Windows
 bind -n S-Right next-window
 bind -n S-Left previous-window
+
+# Panels
+bind - split-window -v
+bind \ split-window -h
+bind -n C-S-Up select-pane -U
+bind -n C-S-Down select-pane -D
+bind -n C-S-Left select-pane -L
+bind -n C-S-Right select-pane -R
 
