--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,11 @@ set-option -g status-bg colour236
 set-option -g status-fg colour248
 
 set-window-option -g window-status-current-fg colour230
-set-window-option -g window-status-current-bg colour100
+set-window-option -g window-status-current-bg colour4
+set-window-option -g window-status-current-attr bold
+
+set -g prefix C-a
+bind r source-file ~/.tmux.conf
 
 # Windows
 bind -n S-Right next-window
@@ -19,4 +23,3 @@ bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 bind -n C-S-Left select-pane -L
 bind -n C-S-Right select-pane -R
-
