--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,3 +23,6 @@ bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 bind -n C-S-Left select-pane -L
 bind -n C-S-Right select-pane -R
+
+unbind a
+bind a copy-mode
