--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -168,11 +168,11 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>225 302 796 473 0 0 1680 1028 </string>
+	<string>225 323 796 473 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>382 416 780 477 0 0 1680 1028 </string>
+	<string>382 393 780 477 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>649 432 640 475 0 0 1680 1050 </string>
+	<string>649 417 780 477 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>233 78 640 452 0 0 1680 1028 </string>
 	<key>NeverWarnAboutShortLivedSessions_95F67B95-BC9E-4A66-9A52-F84315A93265</key>
@@ -811,7 +811,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.14027135724852072</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
