--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,8 @@ set -g default-terminal "screen-256color"
 set-option -g status-bg colour236
 set-option -g status-fg colour248
 
+set-window-option -g window-status-format " #I: #W "
+set-window-option -g window-status-current-format " #I: #W "
 set-window-option -g window-status-current-fg colour230
 set-window-option -g window-status-current-bg colour4
 set-window-option -g window-status-current-attr bold
