Update tmux status style

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,15 @@ set -g default-terminal "screen-256color"
 set-option -g status-bg colour236
 set-option -g status-fg colour248
 
+set-window-option -g status-left " #S "
+set-window-option -g status-left-length 16
+set-window-option -g status-left-fg black
+set-window-option -g status-left-bg white
+
+set-window-option -g status-right " %H:%M "
+set-window-option -g status-right-fg black
+set-window-option -g status-right-bg white
+
 set-window-option -g window-status-format " #I: #W "
 set-window-option -g window-status-current-format " #I: #W "
 set-window-option -g window-status-current-fg colour230
