--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,14 @@ bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 bind -n C-S-Left select-pane -L
 bind -n C-S-Right select-pane -R
+bind i resize-pane -U 2
+bind k resize-pane -D 2
+bind j resize-pane -L 2
+bind l resize-pane -R 2
+bind I resize-pane -U 8
+bind K resize-pane -D 8
+bind J resize-pane -L 8
+bind L resize-pane -R 8
 
 unbind a
 bind a copy-mode
