Add tmux mouse option

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # djosix 2018.8.3
 
 set -g default-terminal "screen-256color"
+set -g mouse on
 
 set-option -g status-bg colour236
 set-option -g status-fg colour248
