--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-# djosix 2018.8.3
+# Author: djosix
+# Date: 2020/02/26
 
 set -g default-terminal "screen-256color"
 set -g mouse on
@@ -8,29 +9,21 @@ set-option -g status-fg colour248
 
 set-window-option -g status-left " #S "
 set-window-option -g status-left-length 16
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg white
-
 set-window-option -g status-right " %H:%M "
-set-window-option -g status-right-fg black
-set-window-option -g status-right-bg white
-
 set-window-option -g window-status-format " #I: #W "
 set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-fg colour230
-set-window-option -g window-status-current-bg colour4
-set-window-option -g window-status-current-attr bold
 
 set -g prefix C-a
 bind r source-file ~/.tmux.conf
 
-# Windows
 bind -n S-Right next-window
 bind -n S-Left previous-window
 
-# Panels
+# Window options
 bind - split-window -v
-bind \ split-window -h
+# bind \ split-window -h # moved to the bottom
+
+# Pane options
 bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 bind -n C-S-Left select-pane -L
@@ -44,5 +37,29 @@ bind K resize-pane -D 8
 bind J resize-pane -L 8
 bind L resize-pane -R 8
 
+# C-a a (copy mode)
 unbind a
 bind a copy-mode
+
+
+# Set version variables for version-specific configs
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | tr -d -C 0-9.)'
+run-shell 'tmux setenv -g TMUX_PRIMARY_VERSION ${TMUX_VERSION%.*}'
+
+# For tmux < 3.0
+if-shell 'test $TMUX_PRIMARY_VERSION -lt 3' '\
+    set-window-option -g status-left-fg black; \
+    set-window-option -g status-left-bg white; \
+    set-window-option -g status-right-fg black; \
+    set-window-option -g status-right-bg white; \
+    set-window-option -g window-status-current-fg white; \
+    set-window-option -g window-status-current-bg colour124; \
+    set-window-option -g window-status-current-attr bold; \
+    bind \ split-window -h; '
+
+# For tmux >= 3.0 (tmux uses yacc as parser after this version)
+if-shell 'test $TMUX_PRIMARY_VERSION -ge 3' ' \
+    set-window-option -g status-left-style fg=black,bg=white; \
+    set-window-option -g status-right-style fg=black,bg=white; \
+    set-window-option -g window-status-current-style fg=white,bg=colour124,bold; \
+    bind \\ split-window -h; '
