--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ set-option -g status-fg colour248
 
 set-window-option -g status-left " #S "
 set-window-option -g status-left-length 16
-set-window-option -g status-right " %H:%M "
+set-window-option -g status-right " #h %H:%M "
 set-window-option -g window-status-format " #I: #W "
 set-window-option -g window-status-current-format " #I: #W "
 
